lab1/Test/L1-A-7-12.output
Error Type A at Line 19
Error Type A at Line 21
Error Type A at Line 30
Error Type A at Line 34
Error Type A at Line 39
