lab1/Test/L1-A-7-12.cmm
struct FGtlM78Ap {
};
int GmXZmFj 
;
int ;
int ;
struct {
  int CiE8Ct4f9T ;
}hC ( int TzV7rJcR5WWmv6N , int gMtoFZ9g ) {
  int d_1trAwdlEafDIgcdx ;
  struct m25OB5qq6 YqgOTJcz , rofjKqL00SDvz5 = sRzDkI 
    <= d * ! - UDlztxcI9epu ( sF5 = xiU01h9rhUSC || DwvWsFrzhdTeBvLAgN 
    && QzYYPuiEkiEGBYlr < nnyvIhouMcD_w + - ( s6RtO == 
    Ez - ( o4QlK1yIH7f9U && KYAZLMvC >= ! ! ZdXwA_e4S5DaOho 
    [ oq8uqoV7FoNpYL && aNQAbL6g_k67_ed != edmVmcaN0Odc 
    [ YyWSVD6q6UVXeF = O88eZG9_ > ( v ( m1DopGPjBFXRhUI 
    , tdM3dznpZ5U89GuNkG7 ) . WK = M1y1zLQ ) ] ] ) + 465381170 
    . zI5lJeURE1jNGbf - 1761033830.598870278 [ W7pGDb 
    ] . zb / ! oUk7pxKJ4gb6jp3YtHyU ( ) ^) ) ;
  float Rr9BxiAeNpn [ 500601286 ] ;
`}
int ;
int ;
int C9jcWkHaxxKXAEa_ ( ) {
  if ( t2MCf4qCVkOZObBpFe0 )   while ( kd6euF4 ) {
    if ( mHFSXD3ahfOUQXZ )     if ( tithjvG3f )     GLsCYhMKdeKguuL 
      ;
else     qX3jf8 ;

else     if ( A1AKhuvLepjocUN )     return \jiWKQMYOmxxhTI3DEI8 
      ;


  }:
else   if ( kj4A )   TdZkdOfyn ;


}
int 'NvJTvNYqyjEnuCwST , _lalAslyRmC8jsiBJ 

;
